# imperial-college-ml-ai-capstone-project

./: .gitignore  README.md  RESULTS.md  dev-start.sh  pyproject.toml
.devcontainer/: .zshrc  dev-start.sh  devcontainer.json  setup.sh
.devcontainer/nvim/: init.lua
notebooks/: README.md  week_1_function_1.ipynb  week_1_function_2.ipynb  week_1_function_3.ipynb  week_1_function_4.ipynb  week_1_function_5.ipynb  week_1_function_6.ipynb  week_1_function_7.ipynb  week_1_function_8.ipynb  week_2_function_1.ipynb  week_2_function_2.ipynb  week_2_function_3.ipynb  week_2_function_4.ipynb  week_2_function_5.ipynb  week_2_function_6.ipynb  week_2_function_7.ipynb  week_2_function_8.ipynb  week_3_function_1.ipynb  week_3_function_2.ipynb  week_3_function_3.ipynb  week_3_function_4.ipynb  week_3_function_5.ipynb  week_3_function_6.ipynb  week_3_function_7.ipynb  week_3_function_8.ipynb  week_4_function_1.ipynb  week_4_function_2.ipynb  week_4_function_3.ipynb  week_4_function_4.ipynb  week_4_function_5.ipynb  week_4_function_6.ipynb  week_4_function_7.ipynb  week_4_function_8.ipynb  week_5_function_1.ipynb  week_5_function_2.ipynb  week_5_function_3.ipynb  week_5_function_4.ipynb  week_5_function_5.ipynb  week_5_function_6.ipynb  week_5_function_7.ipynb  (+17 more)
notebooks/.scripts/: create_weekly.py  create_weekly_data.py  create_weekly_notebooks.py  get_submission.py
notebooks/bbo_capstone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/data/: README.md
submissions/: Week_1.md  Week_2.md  Week_3.md  Week_4.md  Week_5.md  Week_6.md  Week_7.md
(+18 files in other folders)
